.k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
    labels:
        app: k8s-demo

    name: k8s-demo-http

    namespace: k8s-demo

spec:
    clusterIP: None

    ports:
        - port: 4000

    selector:
        app: k8s-demo
